<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sn_menssageconfirm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/m18800"
    android:paddingLeft="@dimen/m18800"
    android:paddingRight="@dimen/m18800"
    android:paddingTop="@dimen/m18800"
    tools:context="com.jace.developers.alyssa.X99999.SX.SXMC">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fnd_02"
        android:scaleType="centerCrop"
        android:contentDescription="@string/app_name"
        android:alpha="0.6"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceLarge"
                android:text="@string/snt_99201_frm"
                android:textColor="@color/CCP02"
                android:textSize="13pt"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/XT46VVF9K"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/CCP03"
                android:textSize="@dimen/CLS07"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m18802"
                android:textAppearance="?android:textAppearanceLarge"
                android:text="@string/snt_99202_frm"
                android:textColor="@color/CNT22"
                android:textSize="@dimen/CLS04"
                android:gravity="center_horizontal"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m18805"
                android:textAppearance="?android:textAppearanceLarge"
                android:text="@string/snt_99203_frm"
                android:textColor="@color/CNT22"
                android:textSize="@dimen/CLS04"
                android:gravity="center_horizontal"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m18802"
                android:layout_marginBottom="@dimen/m18807"
                android:textAppearance="?android:textAppearanceLarge"
                android:text="@string/snt_99204_frm"
                android:textColor="@color/CNT22"
                android:textSize="@dimen/CLS04"
                android:gravity="center_horizontal"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/XNCXZ5V9R"
                android:layout_width="180dp"
                android:layout_height="@dimen/f88101"
                android:layout_marginTop="@dimen/m18804"
                android:text="@string/snt_99200_frm"
                android:textColor="@color/CNTFF"
                android:textSize="@dimen/CLS04"
                android:textAlignment="center"
                android:gravity="center_vertical" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>
