<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/m18802">

        <!-- Titulo -->
        <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/fecha"
            android:layout_marginTop="12dp"
            android:text="@string/sn_76500"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <!-- Categoría -->
        <TextView
            android:id="@+id/clave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/sn_76501"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/CCP03"
            tools:ignore="RelativeOverlap" />

        <!-- Fecha -->
        <TextView
            android:id="@+id/fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="true"
            android:paddingEnd="@dimen/m18802"
            android:paddingLeft="@dimen/m18802"
            android:paddingRight="@dimen/m18802"
            android:layout_toRightOf="@+id/imageView"
            android:layout_toEndOf="@+id/imageView"
            android:text="@string/sn_76503"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black" />

        <!-- Prioridad -->
        <TextView
            android:id="@+id/estatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titulo"
            android:layout_marginTop="8dp"
            android:text="@string/sn_76502"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic" />

        <!-- Icono para la fecha -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="3dp"
            android:layout_marginEnd="3dp"
            android:src="@mipmap/calendar"
            android:contentDescription="@string/app_name" />

    </RelativeLayout>

</android.support.v7.widget.CardView>
