<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:background="@drawable/user"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/app_name" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/m18802" >

            <!-- Nombre -->
            <TextView
                android:id="@+id/XTDV7TRNO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/XTDV7TRFX"
                android:layout_marginTop="12dp"
                android:text="@string/sn_76500"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <!-- Responsabilidad -->
            <TextView
                android:id="@+id/XTDV7TRRS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/sn_76501"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/CCP03"
                tools:ignore="RelativeOverlap" />

            <!-- Fecha -->
            <TextView
                android:id="@+id/XTDV7TRFX"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="false"
                android:layout_alignParentStart="false"
                android:layout_alignParentTop="true"
                android:paddingEnd="@dimen/m18802"
                android:paddingLeft="@dimen/m18802"
                android:paddingRight="@dimen/m18802"
                android:text="@string/sn_76503"
                android:textSize="@dimen/CLS03"
                android:textStyle="italic|bold"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />

            <!-- Asefuradora -->
            <TextView
                android:id="@+id/XTDV7TRSG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/XTDV7TRNO"
                android:layout_marginTop="8dp"
                android:text="@string/sn_76502"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="italic" />

        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
